[package]
name = "fuzzija"
version = "0.0.1"
edition = "2024"

[[bin]]
name = "fuzzija"
path = "src/bin/cli.rs"

[[bin]]
name = "fuzzija-server"
path = "src/bin/server.rs"

[dependencies]
clap = { version = "4.5.31", features = ["derive", "env"] }
env_logger = "0.11.6"
reqwest = "0.12.12"
serde = { version = "1.0.218", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
log = "0.4.26"
zip = "2.2.3"
tantivy = "0.22.0"
scraper = "0.23.1"
encoding_rs = "0.8.35"
encoding_rs_io = "0.1.7"
csv = "1.3.1"
